--- a/data/nlm.yaml
+++ b/data/nlm.yaml
@@ -1,15 +1,19 @@
 # NLM Table Detector
 # Train command: python nlm_train.py --img 1344 --batch xxx --epochs xxx --data data/nlm.yaml --weights '' --cfg models/nlm.yaml
 
-
-train: null
-val: null
-
-# number of classes
-nc: 3
+train: 0.9
+val: 0.1
+random_seed: 0
 
 # number of features
 num_features: 12
 
+# number of classes
+nc: 1
 # class names
-names: [ 'table', 'header', 'para']
+names: ["table"]
+## number of classes
+#nc: 3
+## class names
+#names: [ 'table', 'header', 'para']
+#
